# omp_testgen

./: .clang-format  .gitignore  README.md
BaseTests/: allocators.f90  target_device.f90
Scripts/: main.py  mangler.py
TestMangler/: CMakeLists.txt  MangleAction.cpp  MangleVisitor.cpp  MangleVisitor.h
flang/examples/: CMakeLists.txt
flang/examples/TestMangler/: CMakeLists.txt  MangleVisitor.cpp  MangleVisitor.h
testgen/: __init__.py  store.py
